fix custom fonts not showing in vercel deployment production

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,17 +6,17 @@
 
 @font-face {
   font-family: "NeueHaasDisplay35";
-  src: url("/fonts/Neue Haas Grotesk Display Pro 35 Extra Light.ttf")
+  src: url("./fonts/Neue Haas Grotesk Display Pro 35 Extra Light.ttf")
     format("truetype");
 }
 @font-face {
   font-family: "NeueHaasGroteskDisplayPro45Light";
-  src: url("/fonts/Neue Haas Grotesk Display Pro 45 Light.ttf")
+  src: url("./fonts/Neue Haas Grotesk Display Pro 45 Light.ttf")
     format("truetype");
 }
 @font-face {
   font-family: "Seaword2";
-  src: url("/fonts/Seaword2.ttf") format("truetype");
+  src: url("./fonts/Seaword2.ttf") format("truetype");
 }
 
 html {
